--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
     font-size: x-large;
 }
 
-#cadastro {
+#cadastros {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,18 +77,18 @@ body {
     font-family: 'Basic', sans-serif;
 }
 
-#cadastro>h2 {
+#cadastros>h2 {
     margin-bottom: 20px;
     word-wrap: break-word;
 }
 
-#cadastro input[type="email"] {
+#cadastros input[type="email"] {
     max-width: 100%;
     width: 95%;
     padding: 5px;
 }
 
-#cadastro input[type="submit"] {
+#cadastros input[type="submit"] {
     max-width: 100%;
     width: 100%;
     height: 30px;
@@ -98,13 +98,13 @@ body {
     background-color: rgb(241, 133, 55);
 }
 
-#cadastro input[type="submit"]:hover {
+#cadastros input[type="submit"]:hover {
     background-color: chocolate;
     transition: background-color 1s;
 }
 
 @media (max-width: 650px) {
-    #cadastro {
+    #cadastros {
         margin-top: 120px;
     }
 }
